--- a/03.html
+++ b/03.html
@@ -5,69 +5,119 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>قنوات أكاديمية تاليات لعلوم القرآن والعلم الشرعي</title>
     <style>
+        /* Universal styles */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            color: #333;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
+            direction: rtl;
+            overflow: hidden;
+            background: url('https://www.w3schools.com/w3images/space.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #fff;
         }
         header {
-            background-color: #007bff;
+            background: rgba(0, 0, 0, 0.6);
             color: white;
-            padding: 10px 0;
+            padding: 20px;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
         header h1 {
+            font-size: 2.5em;
             margin: 0;
-            font-size: 2em;
+            letter-spacing: 1px;
         }
+
         .container {
             width: 80%;
-            margin: 20px auto;
+            margin: 30px auto;
             padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            background: rgba(0, 0, 0, 0.6);
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            backdrop-filter: blur(5px);
         }
+
         .channel {
-            margin-bottom: 20px;
+            background-color: rgba(255, 255, 255, 0.2);
+            margin-bottom: 25px;
             padding: 15px;
-            background-color: #f1f1f1;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+            transition: all 0.3s ease-in-out;
         }
+
+        .channel:hover {
+            transform: scale(1.02);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+        }
+
         .channel h3 {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-            color: #007bff;
+            font-size: 1.6em;
+            color: #fff;
+            margin-bottom: 15px;
+            text-shadow: 1px 1px 2px #000;
         }
+
         .channel p {
             font-size: 1.2em;
+            color: #fff;
             margin: 10px 0;
-            color: #555;
         }
+
         .channel a {
-            display: inline-block;
-            padding: 10px 20px;
+            padding: 12px 20px;
             background-color: #28a745;
             color: white;
             text-decoration: none;
-            border-radius: 5px;
             font-size: 1.1em;
-            transition: background-color 0.3s;
+            border-radius: 8px;
+            display: inline-block;
+            transition: background-color 0.3s, transform 0.2s;
         }
+
         .channel a:hover {
             background-color: #218838;
+            transform: translateY(-3px);
         }
+
         footer {
             text-align: center;
-            padding: 20px;
-            background-color: #007bff;
+            padding: 15px;
+            background-color: rgba(0, 0, 0, 0.8);
             color: white;
             position: fixed;
             width: 100%;
             bottom: 0;
+        }
+
+        /* Animation for stars */
+        .stars {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        .stars .star {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 50%;
+            animation: moveStars 60s linear infinite;
+        }
+
+        /* Keyframes for star animations */
+        @keyframes moveStars {
+            0% {
+                transform: translateX(0) translateY(0);
+            }
+            100% {
+                transform: translateX(100vw) translateY(100vh);
+            }
         }
     </style>
 </head>
@@ -76,6 +126,19 @@
     <header>
         <h1>قنوات أكاديمية تاليات لعلوم القرآن والعلم الشرعي</h1>
     </header>
+
+    <!-- Galaxy Stars Animation -->
+    <div class="stars">
+        <!-- Multiple stars to create a cosmic effect -->
+        <div class="star" style="top: 10%; left: 20%; width: 5px; height: 5px;"></div>
+        <div class="star" style="top: 30%; left: 50%; width: 7px; height: 7px;"></div>
+        <div class="star" style="top: 50%; left: 70%; width: 4px; height: 4px;"></div>
+        <div class="star" style="top: 70%; left: 80%; width: 6px; height: 6px;"></div>
+        <div class="star" style="top: 20%; left: 10%; width: 3px; height: 3px;"></div>
+        <div class="star" style="top: 60%; left: 90%; width: 8px; height: 8px;"></div>
+        <div class="star" style="top: 80%; left: 40%; width: 5px; height: 5px;"></div>
+        <!-- Add more stars as needed -->
+    </div>
 
     <div class="container">
         <div class="channel">
